--- a/MT.CSGPortal.Utility/MT.CSGPortal.Utility.csproj
+++ b/MT.CSGPortal.Utility/MT.CSGPortal.Utility.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Search.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -118,6 +119,11 @@
       <Project>{f21378a1-68f4-4802-bf7d-58632d851889}</Project>
       <Name>MT.CSGPortal.Portable.Entities</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Analyzer Include="..\packages\SonarAnalyzer.CSharp.1.20.1\analyzers\Google.Protobuf.dll" />
+    <Analyzer Include="..\packages\SonarAnalyzer.CSharp.1.20.1\analyzers\SonarAnalyzer.CSharp.dll" />
+    <Analyzer Include="..\packages\SonarAnalyzer.CSharp.1.20.1\analyzers\SonarAnalyzer.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
