--- a/MT.CSGPortal.Entities/packages.config
+++ b/MT.CSGPortal.Entities/packages.config
@@ -3,4 +3,5 @@
   <package id="Common.Logging" version="2.1.2" targetFramework="net451" />
   <package id="Remotion.Linq" version="1.13.183.0" targetFramework="net451" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net451" />
+  <package id="SonarAnalyzer.CSharp" version="1.20.1" targetFramework="net45" developmentDependency="true" />
 </packages>
