--- a/MT.CSGPortal.UserInterface/packages.config
+++ b/MT.CSGPortal.UserInterface/packages.config
@@ -15,5 +15,6 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
+  <package id="SonarAnalyzer.CSharp" version="1.20.1" targetFramework="net45" developmentDependency="true" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
