--- a/MT.CSGPortal.Utility/packages.config
+++ b/MT.CSGPortal.Utility/packages.config
@@ -7,4 +7,5 @@
   <package id="Remotion.Linq" version="1.13.183.0" targetFramework="net451" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net451" />
   <package id="SimpleLucene" version="1.0.0.1" targetFramework="net451" />
+  <package id="SonarAnalyzer.CSharp" version="1.20.1" targetFramework="net45" developmentDependency="true" />
 </packages>
